styles/liturgical-calendar.less
/**
 * Styles for the liturgical calendar
 */

.liturgical-layout-full,
#home-services .liturgical-layout-full .summary-title,
#home-services .liturgical-layout-full .summary-content,
#home-services .liturgical-layout-full .summary-excerpt p,
#home-services .liturgical-layout-full .summary-excerpt ul,
#home-services .liturgical-layout-full .summary-excerpt li {
    text-align: center;
}

.liturgical-layout-full .sqs-block-content ul,
.liturgical-layout-full .summary-excerpt ul {
    list-style: none;
    margin-left: 0;
}

.liturgical-layout-full .sqs-block-content > ul > li,
.liturgical-layout-full .summary-excerpt > ul > li {
    margin-bottom: 1em;
}

.liturgical-layout-full .sqs-block-content > ul > li > ul > li,
.liturgical-layout-full .summary-excerpt > ul > li > ul > li {
    font-style: italic;
}

#home-services .summary-title {
    font-weight: bold;
    font-size: 1.875em;
}

#home-services .summary-excerpt p,
#home-services .summary-excerpt ul,
#home-services .summary-excerpt li {
    font-size: 1em;
}

